Fixed the alignment of sorting options

--- a/src/app/components/number-per-page/number-per-page.component.scss
+++ b/src/app/components/number-per-page/number-per-page.component.scss
@@ -67,7 +67,7 @@
 #sortBy option {
   background-color: white;
   color: #223654;
-  text-align: center;
+  text-align: left;
 }
 
 #sortBy:hover {
